--- a/documents/documentation/memtype.adoc
+++ b/documents/documentation/memtype.adoc
@@ -2,6 +2,7 @@
 area0x33 <info@area0x33.com>
 :icons: font
 :data-uri:
+:experimental:
 :toc: right
 
 [IMPORTANT]
@@ -69,6 +70,9 @@ capability like tablets, smart tv, and phones.
 using the <<MemTypeTool GUI>>. 
 * `Truly Open Source` Software and Hardware.
 
+=== Credentials
+
+
 === N_O_D_E Video review
 
 If you want a great video introduction and review of the MemType, check the
@@ -85,6 +89,53 @@ video::O16U_TjAutU[youtube, width="800",height="500"]
 === Compare to PK3
 
 == Quick start
+
+Open a `text editor` and connect the MemType to the `USB` port of your computer. 
+You'll see the `red led` icon:circle[role="red"] turning on indicating it's being 
+`powered` correctly and it's `locked`.
+
+On the text editor it will write a `welcome message` indicating it's firmware
+version:
+
+
+	MemType 3.1.0
+
+
+You don't have to delete what it writes, it deletes it's own text to write new
+one, `that's how the MemType communicates with you`.
+Now you can unlock it entering the `PIN`, by default it's `0000`. To enter the PIN
+use the `joystick`: 
+
+* up icon:arrow-up[] increases the number. 
+* down icon:arrow-down[] decreases.
+* towards the connector icon:arrow-right[] accepts the number.
+* the opposite joystick movement icon:arrow-left[] to cancel. 
+
+We'll refer to these movements
+kbd:[up], kbd:[down], kbd:[enter] and kbd:[back] respectively.
+
+You should have now the pin entered:
+
+	PIN: 0000
+
+One more kbd:[enter] and it'll validate and show the name of the first credential
+and the green led icon:circle[role="green"] will be on.
+If the PIN is incorrect an error message will be displayed:
+
+	PIN ERR
+
+The MemType comes preloaded with 3 dummy credentials so you can play the first
+time. Move kbd:[up] and kbd:[down] to see their names, apply one with the
+kbd:[enter] movement on the joystick, see the details with one kbd:[back] 
+movement and lock the device with one more kbd:[back] movement (2 in total) 
+turning the red led icon:circle[role="red"] on again.
+
+That's the basic usage of the MemType, now to be useful it has to contain the
+credentials you'll use, setup a *different PIN*, and be loaded with the same
+`keyboard layout` as your operating system or you'll see strange characters. To do
+all this management on the device there is an easy to use Graphical User
+Interface software called <<MemTypeTool GUI>>.
+
 
 == MemTypeTool GUI
 [.text-center]
@@ -118,6 +169,7 @@ image::screenshot.png[title="MemTypeTool GUI"]
 === Credential details
 
 === Lock the device
+
 
 == MemType library
 
